[project]
name = "blog"
version = "0.1.0"
description = ""
readme = "readme.md"
authors = [
    {name = "Hendrik Schawe", email = "surt91@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pelican>=4.7.2",
    "webassets>=2.0",
    "libsass>=0.21.0",
    "cssmin>=0.2.0",
    "jsmin>=3.0.1",
    "pycountry>=22.3.5",
    "typogrify>=2.0.7",
    "requests>=2.32.0",
    "Markdown>=3.3.7",
    "beautifulsoup4>=4.11.1",
]
